# shellbeats

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  YOUTUBE_PLAYLIST_GUIDE.md  i18n.c  i18n.h  sb_exec.c  sb_exec.h  shellbeats.c  shellbeats_zex  youtube_playlist.c  youtube_playlist.h
docs/: YOUTUBE_PLAYLIST_GUIDE.md
po/: hu.po  shellbeats.pot
src/: shellbeats.c
